# TaskTestDjango

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Test/: manage.py
Test/MainApp/: Aunthenticated.py  Authorization.py  admin.py  const.py  get_pokemon_stats.py  models.py  serializers.py  tests.py  urls.py
Test/MainApp/migrations/: 0001_initial.py
Test/MainApp/templates/: redoc.html  swagger-ui.html
Test/MainApp/views/: DeleteFile.py  GetFile.py  Login.py  Registration.py  UpdateFile.py  UploadFile.py  __init__.py
Test/Test/: settings.py  urls.py
Test/media/: pokemon.json
